--- a/Broken.html
+++ b/Broken.html
@@ -31,7 +31,7 @@
         <script>
               function myTib() {document.getElementById("break").innerHTML = "This tibia bone was the bigger bone of the two that I broke in my leg. Your tibia is part of your shin bone and you can feel it in your leg. This part made the loudest snap sound that I have ever heard and was the first bone that broke when I broke my leg. When I went up for the layup during my tournament game, my tibia hit the post of the basket first and snapped in half and remained in half until I  had surgery. By clicking fix me, you can see the pieces of metal that they put in my bone to make me part robot.";}
               
-                function myFib() {document.getElementById("break").innerHTML = "wniogwenigow";}
+                function myFib() {document.getElementById("break").innerHTML = "The fibula bone in my leg is the smaller bone of the two. Everybody's fibula, yes everybody includes you, heals on it own as long as it is in place. Because of this, I do not have any metal or any contraption in my fibula to stabilize it. All the doctors had to do to fix this break was line the fibula up and then it healed on its own since it's such a small bone.";}
         </script>
         <title>BROKEN</title>
     </head>
@@ -69,7 +69,7 @@
         </table>
         <h1 align="center">Model Of My Broken Leg</h1>
 <a id="fix" href="Modeling.html">FIX ME</a>
-<button id="tibbreak" onclick="myTib()">Tibia Break</button>
+<button id="tibbreak" onclick="myTib()">Tibia Break</button> <!--These both have the same html and javascript structure and functions that I explain in the Modeling.html part-->
 <button id="fibbreak" onclick="myFib()">Fibula Break</button>
 <img id="xray" src="http://i.imgur.com/9OktEzH.jpg">
 <p id="break"></p>
