--- a/Vindinium.html
+++ b/Vindinium.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <style>
-                #tableofcontents{position:fixed;
+                #tableofcontents{position:relative;
         margin-left:15px;
         float:right;
         right:100px;
@@ -12,6 +12,7 @@
 width:500px;
     margin-left:420px;
 }
+body{background-color:cyan;}
         </style>
         <title>Vindinium</title>
     </head>
