--- a/Modeling.html
+++ b/Modeling.html
@@ -80,7 +80,7 @@
             document.getElementById("map_img4").style.display = "";
         }
         </script>
-        <title>Robot Leg</title>
+        <title>Fixed Leg</title>
     </head>
     <body>
         <h1 align="center">Model of My Robot Leg</h1> 
